.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xpert-api-service
  labels:
    app: xpert-api
spec:
  type: ClusterIP
  selector:
    app: xpert-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
